--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'vendors/normalize';
 @import 'components/example';
+@import 'components/tabs';
 
 /**
  * Set up a decent box model on the root element
