Working Accordion Component

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'vendors/normalize';
 @import 'components/example';
 @import 'components/tabs';
+@import 'components/accordion';
 
 /**
  * Set up a decent box model on the root element
