Working Modal Examples

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'components/example';
 @import 'components/tabs';
 @import 'components/accordion';
+@import 'components/modal';
 
 /**
  * Set up a decent box model on the root element
