--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -4,8 +4,11 @@
   left: 50%;
   transform: translate(-50%,-50%);
   background: $white;
-  width: 320px;
-  height: 320px;
+  min-width: 320px;
+  width: 80%;
+  min-height: 320px;
+  height: 80%;
+  overflow: scroll;
   text-align: center;
   box-shadow: 0 0 20px rgba(0,0,0,.2);
   border: 1px solid $black;
@@ -38,5 +41,6 @@
 
   .modal-content {
     padding: 1rem;
+    text-align: left;
   }
 }
